--- a/templates/plant_care.html
+++ b/templates/plant_care.html
@@ -9,6 +9,7 @@
              alt="{{ plant.name }}" 
              class="plant-detail-image">
         <h1>{{ plant.name }}</h1>
+        <p>{{ plant.description }}</p>
     </div>
 
     <div class="care-instructions">
